# slumber

./: .gitattributes  .gitignore  .rules  .rustfmt.toml  404.html  CHANGELOG.md  CNAME  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE.md  artifacts.json  changelog.html  changelog.rss  cli.sh  collection.slumber  demo.sh  editable.tape  getting_started.html  gifs.py  index.html  install.html  introduction.html  mise.toml  oranda-v0.5.0.css  oranda.json  print.html  run.sh  rust-toolchain.toml  searcher-c2a407aa.js  searchindex-1067494e.js  searchindex-239cb2b9.js  searchindex-2fc87508.js  searchindex-6519275e.js  searchindex-7b9427c7.js  searchindex-82e40bbb.js  searchindex-aac759a0.js  searchindex-ba105c94.js  searchindex-c032a57c.js  (+19 more)
.cargo/: config.toml
crates/cli/: Cargo.toml
crates/cli/src/: bin.rs  commands.rs  completions.rs  lib.rs  util.rs
crates/cli/src/commands/: collection.rs  collections.rs  complete.rs  completions.rs  config.rs  db.rs  generate.rs  history.rs  import.rs  new.js  new.luau  new.rs  new.yml  request.rs  schema.rs  show.rs
crates/cli/src/commands/db/: collection.rs  request.rs
crates/cli/tests/: common.rs  other.yml  slumber.js  slumber.yml  test_collection.rs  test_collections.rs  test_config.rs  test_db.rs  test_generate.rs  test_history.rs  test_import.rs  test_request.rs  test_show.rs
crates/config/: Cargo.toml
crates/config/src/: cereal.rs  default.yml  default_old.yml  input.rs  lib.rs  mime.rs  theme.rs  tui.rs
crates/config/src/tui/: cereal.rs  input.rs  mime.rs  theme.rs
crates/console/: Cargo.toml
crates/console/src/: lib.rs
crates/core/: Cargo.toml
crates/core/proptest-regressions/: collection.txt
crates/core/proptest-regressions/template/: parse.txt
crates/core/src/: collection.rs  database.rs  db.rs  http.rs  js.rs  lib.rs  lua.rs  petit.rs  proptest_util.rs  ps.rs  render.rs  template.rs  test_util.rs  util.rs
crates/core/src/collection/: cereal.rs  insomnia.rs  json.rs  models.rs  openapi.rs  recipe_tree.rs  resolve.rs  schema.rs  value_template.rs
crates/core/src/collection/openapi/: resolve.rs
crates/core/src/database/: convert.rs  migrations.rs  tests.rs
crates/core/src/db/: convert.rs  migrations.rs  tests.rs
crates/core/src/http/: content_type.rs  curl.rs  models.rs  query.rs  tests.rs
crates/core/src/js/: cereal.rs  error.rs  functions.rs
crates/core/src/lua/: error.rs  functions.rs
crates/core/src/petit/: functions.rs
crates/core/src/ps/: cereal.rs  error.rs  functions.rs
crates/core/src/render/: functions.rs  tests.rs  util.rs
crates/core/src/template/: cereal.rs  error.rs  functions.rs  parse.rs  prompt.rs  render.rs  tests.rs
crates/core/src/util/: json.rs  paths.rs
crates/doc_utils/: Cargo.toml
crates/doc_utils/src/: lib.rs  template_functions.rs
crates/fs/: Cargo.toml
crates/fs/src/: bin.rs  client.rs  filesystem.rs  http.rs  lib.rs  message.rs  node.rs  rpc.rs  util.rs
crates/fs/src/filesystem/: node.rs
crates/import/: Cargo.toml
crates/import/src/: common.rs  insomnia.rs  legacy.rs  lib.rs  openapi.rs  rest.rs  v3.rs  yaml.rs
crates/import/src/common/: cereal.rs  generate.rs  ps.rs  recipe_tree.rs  template.rs
crates/import/src/insomnia/: parse.rs
crates/import/src/legacy/: cereal.rs  collection.rs  template.rs
crates/import/src/openapi/: resolve.rs  v3_0.rs  v3_1.rs
crates/import/src/v3/: models.rs  template.rs
crates/import/src/yaml/: cereal.rs  collection.rs  template.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/python/: Cargo.toml  README.md  dev.py  mise.toml  pyproject.toml  slumber.pyi
crates/python/src/: lib.rs
crates/python/tests/: slumber.yml  test.py
crates/resolve/: Cargo.toml
crates/resolve/src/: lib.rs  parse.rs
crates/rustyscript-test/: Cargo.toml  slumber.ts
crates/rustyscript-test/src/: main.rs
crates/slumber_cli/: Cargo.toml
crates/slumber_cli/src/: commands.rs  lib.rs
crates/slumber_cli/src/commands/: generate.rs  history.rs  import.rs  request.rs  show.rs
crates/slumber_core/: Cargo.toml
crates/slumber_core/proptest-regressions/template/: parse.txt
crates/slumber_core/src/: collection.rs  config.rs  db.rs  http.rs  lib.rs  template.rs  test_util.rs  util.rs
crates/slumber_core/src/collection/: cereal.rs  insomnia.rs  models.rs  openapi.rs  recipe_tree.rs
crates/slumber_core/src/db/: convert.rs  migrations.rs
crates/slumber_core/src/http/: content_type.rs  models.rs  query.rs
crates/slumber_core/src/template/: cereal.rs  error.rs  parse.rs  prompt.rs  render.rs
crates/slumber_core/src/util/: paths.rs
crates/slumber_tui/: Cargo.toml
crates/slumber_tui/src/: config.rs  context.rs  http.rs  input.rs  lib.rs  message.rs  test_util.rs  util.rs  view.rs
crates/slumber_tui/src/view/: common.rs  component.rs  context.rs  debug.rs  draw.rs  event.rs  state.rs  styles.rs  test_util.rs  theme.rs  util.rs
crates/template/: Cargo.toml
crates/template/proptest-regressions/: parse.txt
crates/template/src/: cereal.rs  display.rs  error.rs  expression.rs  function.rs  lib.rs  parse.rs  render.rs  test_util.rs  tests.rs  util.rs  value.rs
crates/tui/: Cargo.toml
crates/tui/src/: bin.rs  collection_state.rs  context.rs  http.rs  input.rs  js.rs  lib.rs  message.rs  state.rs  test_util.rs  tui_state.rs  util.rs  view.rs
crates/tui/src/http/: tests.rs
crates/tui/src/util/: persistence.rs  preview.rs  syntax.rs
crates/tui/src/view/: common.rs  component.rs  context.rs  debug.rs  draw.rs  event.rs  persistent.rs  state.rs  styles.rs  test_util.rs  util.rs
crates/tui/tests/: common.rs  test_actions.rs  test_collection.rs  test_reload.rs  test_request.rs
crates/util/: Cargo.toml
crates/util/src/: lib.rs  paths.rs  test_util.rs  yaml.rs
crates/util/src/yaml/: error.rs  resolve.rs
tree-sitter/: Cargo.toml  binding.gyp  grammar.js  mise.toml  package-lock.json  package.json  tree-sitter.json
tree-sitter/bindings/node/: binding.cc  index.d.ts  index.js
tree-sitter/bindings/rust/: build.rs  lib.rs
tree-sitter/src/: grammar.json  node-types.json  parser.c
(+544 files in other folders)
