[package]
authors = {workspace = true}
description = "Terminal-based HTTP client"
edition = {workspace = true}
homepage = {workspace = true}
keywords = {workspace = true}
license = {workspace = true}
name = "slumber"
repository = {workspace = true}
rust-version = {workspace = true}
version = {workspace = true}

[workspace]
members = ["crates/*"]

[workspace.package]
authors = ["Lucas Pickering <lucas@lucaspickering.me>"]
edition = "2024"
homepage = "https://slumber.lucaspickering.me"
keywords = ["rest", "http", "terminal", "tui"]
license = "MIT"
repository = "https://github.com/LucasPickering/slumber"
version = "3.0.1"
# Keep in sync w/ rust-toolchain.toml
rust-version = "1.86.0"

# Dependencies used in multiple crates get de-duplicated here
[workspace.dependencies]
anyhow = "1.0.0"
async-trait = "0.1.81"
bytes = {version = "1.6.1", default-features = false}
chrono = {version = "0.4.31", default-features = false}
crossterm = {version = "0.28.0", default-features = false, features = ["events"]}
derive_more = {version = "1.0.0", default-features = false}
dialoguer = {version = "0.11.0", default-features = false}
dirs = "5.0.1"
env-lock = "0.1.0"
futures = "0.3.28"
indexmap = {version = "2.0.0", default-features = false}
itertools = "0.13.0"
mime = "0.3.17"
pretty_assertions = "1.4.0"
ratatui = {version = "0.28.0", default-features = false}
reqwest = {version = "0.12.5", default-features = false}
rstest = {version = "0.24.0", default-features = false}
serde = {version = "1.0.204", default-features = false}
serde_json = {version = "1.0.120", default-features = false, features = ["preserve_order"]}
serde_test = "1.0.176"
serde_yaml = {version = "0.9.0", default-features = false}
slumber_cli = {path = "./crates/cli", version = "3.0.1"}
slumber_config = {path = "./crates/config", version = "3.0.1"}
slumber_core = {path = "./crates/core", version = "3.0.1"}
slumber_import = {path = "./crates/import", version = "3.0.1"}
slumber_tui = {path = "./crates/tui", version = "3.0.1"}
slumber_util = {path = "./crates/util", version = "3.0.1"}
strum = {version = "0.26.3", default-features = false}
thiserror = "1.0.63"
tokio = {version = "1.39.2", default-features = false}
tracing = "0.1.40"
uuid = {version = "1.10.0", default-features = false}
winnow = "0.6.16"
wiremock = {version = "0.6.1", default-features = false}

[dependencies]
anyhow = {workspace = true, features = ["backtrace"]}
slumber_cli = {workspace = true, optional = true}
slumber_tui = {workspace = true, optional = true}
slumber_util = {workspace = true}
tokio = {workspace = true, features = ["macros", "rt"]}
tracing = {workspace = true}
tracing-subscriber = {version = "0.3.17", default-features = false, features = ["ansi", "fmt", "registry"]}

[features]
default = ["cli", "tui"]
# TUI and CLI can be disabled in dev to speed compilation while not in use
cli = ["dep:slumber_cli"]
tui = ["dep:slumber_tui"]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.release]
pre-release-hook = ["python", "./gifs.py", "--check"]
pre-release-replacements = [
  {file = "CHANGELOG.md", search = "## \\[Unreleased\\] - ReleaseDate", replace = "## [Unreleased] - ReleaseDate\n\n## [{{version}}] - {{date}}"},
]

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "LucasPickering/homebrew-tap"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Which actions to run on pull requests
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false
# Path that installers should place binaries in
install-path = "CARGO_HOME"
