[package]
authors = {workspace = true}
description = "Command line interface for Slumber. Not intended for external use."
edition = {workspace = true}
homepage = {workspace = true}
keywords = {workspace = true}
license = {workspace = true}
name = "slumber_cli"
repository = {workspace = true}
rust-version = {workspace = true}
version = {workspace = true}

[[bin]]
name = "slumber_cli"
path = "src/bin.rs"

[dependencies]
anyhow = {workspace = true}
clap = {version = "4.4.2", features = ["derive"]}
clap_complete = {version = "4.5.29", features = ["unstable-dynamic"]}
dialoguer = {workspace = true, features = ["password"]}
indexmap = {workspace = true}
itertools = {workspace = true}
reqwest = {workspace = true}
serde = {workspace = true}
serde_yaml = {workspace = true}
slumber_config = {workspace = true}
slumber_core = {workspace = true}
slumber_import = {workspace = true}
tokio = {workspace = true, features = ["rt", "macros"]}
tracing = {workspace = true}

[dev-dependencies]
assert_cmd = "2.0.16"
env-lock = {workspace = true}
pretty_assertions = {workspace = true}
rstest = {workspace = true}
serde_json = {workspace = true}
slumber_core = {workspace = true, features = ["test"]}
wiremock = {workspace = true}

[package.metadata.release]
tag = false
