[package]
authors = {workspace = true}
description = "Configuration for Slumber. Not intended for external use."
edition = {workspace = true}
homepage = {workspace = true}
keywords = {workspace = true}
license = {workspace = true}
name = "slumber_config"
repository = {workspace = true}
rust-version = {workspace = true}
version = {workspace = true}

[dependencies]
anyhow = {workspace = true}
crossterm = {workspace = true}
derive_more = {workspace = true, features = ["deref", "display"]}
glob = "0.3.2"
indexmap = {workspace = true, features = ["serde"]}
itertools = {workspace = true}
mime = {workspace = true}
ratatui = {workspace = true, features = ["serde"]}
serde = {workspace = true}
slumber_util = {workspace = true}
tracing = {workspace = true}

[dev-dependencies]
dirs = {workspace = true}
env-lock = {workspace = true}
rstest = {workspace = true}
serde_test = {workspace = true}
slumber_util = {workspace = true, features = ["test"]}

[package.metadata.release]
tag = false
