[package]
authors = {workspace = true}
description = "Configuration for Slumber. Not intended for external use."
edition = {workspace = true}
homepage = {workspace = true}
keywords = {workspace = true}
license = {workspace = true}
name = "slumber_config"
repository = {workspace = true}
rust-version = {workspace = true}
version = {workspace = true}

[dependencies]
anyhow = {workspace = true}
derive_more = {workspace = true, features = ["deref", "display"]}
editor-command = "1.0.0"
glob = "0.3.2"
indexmap = {workspace = true, features = ["serde"]}
itertools = {workspace = true}
mime = {workspace = true}
ratatui-core = {version = "0.1.0-alpha.6", default-features = false, features = ["serde"]}
schemars = {workspace = true, features = ["indexmap2"], optional = true}
serde = {workspace = true}
slumber_util = {workspace = true}
terminput = {workspace = true}
tracing = {workspace = true}

[dev-dependencies]
dirs = {workspace = true}
env-lock = {workspace = true}
rstest = {workspace = true}
serde_test = {workspace = true}
slumber_util = {workspace = true, features = ["test"]}

[features]
schema = ["dep:schemars"]

[lints]
workspace = true

[package.metadata.release]
tag = false
