[package]
authors = {workspace = true}
description = "Core library for Slumber. Not intended for external use."
edition = {workspace = true}
homepage = {workspace = true}
keywords = {workspace = true}
license = {workspace = true}
name = "slumber_core"
repository = {workspace = true}
rust-version = {workspace = true}
version = {workspace = true}

[dependencies]
anyhow = {workspace = true}
async-trait = {workspace = true}
bytes = {workspace = true, features = ["serde"]}
chrono = {workspace = true, features = ["clock", "serde", "std"]}
derive_more = {workspace = true, features = ["debug", "deref", "deref_mut", "display", "from", "from_str", "into"]}
dialoguer = {workspace = true}
futures = {workspace = true}
indexmap = {workspace = true, features = ["serde"]}
itertools = {workspace = true}
mime = {workspace = true}
petitscript = {workspace = true}
reqwest = {workspace = true, features = ["json", "multipart", "rustls-tls", "rustls-tls-native-roots"]}
rmp-serde = "1.1.2"
rstest = {workspace = true, optional = true}
rusqlite = {version = "0.31.0", default-features = false, features = ["bundled", "chrono", "uuid"]}
rusqlite_migration = "1.2.0"
serde = {workspace = true, features = ["derive"]}
serde_json = {workspace = true}
serde_path_to_error = "0.1.16"
serde_yaml = {workspace = true}
slumber_config = {workspace = true}
slumber_util = {workspace = true}
strum = {workspace = true, features = ["derive"]}
thiserror = {workspace = true}
tokio = {workspace = true, features = ["fs", "process"]}
tracing = {workspace = true}
url = {version = "2.0.0", features = ["serde"]}# Inherited from reqwest
uuid = {workspace = true, features = ["serde", "v4"]}
winnow = {workspace = true}

[dev-dependencies]
env-lock = {workspace = true}
pretty_assertions = {workspace = true}
rstest = {workspace = true}
serde_test = {workspace = true}
slumber_util = {workspace = true, features = ["test"]}
wiremock = {workspace = true}

[features]
test = ["dep:rstest", "slumber_util/test"]

[package.metadata.release]
tag = false
