[package]
authors = {workspace = true}
description = "Core library for Slumber. Not intended for external use."
edition = {workspace = true}
homepage = {workspace = true}
keywords = {workspace = true}
license = {workspace = true}
name = "slumber_core"
repository = {workspace = true}
rust-version = {workspace = true}
version = {workspace = true}

[dependencies]
anyhow = {workspace = true}
async-trait = {workspace = true}
bytes = {workspace = true, features = ["serde"]}
chrono = {workspace = true, features = ["clock", "serde", "std"]}
derive_more = {workspace = true, features = ["debug", "deref", "deref_mut", "display", "from", "from_str", "into"]}
dialoguer = {workspace = true}
futures = {workspace = true}
indexmap = {workspace = true, features = ["serde"]}
itertools = {workspace = true}
mime = {workspace = true}
regex = {version = "1.10.5", default-features = false}
reqwest = {workspace = true, features = ["multipart", "rustls-tls", "rustls-tls-native-roots"]}
rstest = {workspace = true, optional = true}
rusqlite = {version = "0.35.0", default-features = false, features = ["bundled", "chrono", "uuid"]}
rusqlite_migration = "2.1.0"
serde = {workspace = true, features = ["derive"]}
serde_json = {workspace = true}
serde_json_path = "0.7.1"
serde_yaml = {workspace = true}
slumber_config = {workspace = true}
slumber_util = {workspace = true}
strum = {workspace = true, features = ["derive"]}
thiserror = {workspace = true}
tokio = {workspace = true, features = ["fs", "process"]}
tracing = {workspace = true}
url = {workspace = true, features = ["serde"]}
uuid = {workspace = true, features = ["serde", "v4"]}
winnow = {workspace = true}

[dev-dependencies]
env-lock = {workspace = true}
pretty_assertions = {workspace = true}
proptest = "1.5.0"
proptest-derive = "0.5.0"
rstest = {workspace = true}
serde_test = {workspace = true}
slumber_util = {workspace = true, features = ["test"]}
wiremock = {workspace = true}

[features]
test = ["dep:rstest", "slumber_util/test"]

[lints]
workspace = true

[package.metadata.release]
tag = false
