[package]
authors = {workspace = true}
description = "Local-only utilities for generating documentation"
edition = {workspace = true}
homepage = {workspace = true}
keywords = {workspace = true}
license = {workspace = true}
name = "doc_utils"
publish = false
repository = {workspace = true}
rust-version = {workspace = true}
# Even though this crate isn't published, we keep the version in sync so the
# `version` preprocessor has the correct value
version = {workspace = true}

[package.metadata.release]
release = false
tag = false

[dependencies]
anyhow = {workspace = true}
clap = {workspace = true, features = ["derive"]}
indexmap = {workspace = true, features = ["serde"]}
itertools = {workspace = true}
mdbook-preprocessor = {version = "0.5", default-features = false}
serde = {workspace = true, features = ["derive"]}
serde_json = {workspace = true}
serde_yaml = {workspace = true}
syn = {workspace = true, features = ["extra-traits", "full", "printing"]}
quote = {workspace = true}

[lints]
workspace = true
