[package]
authors = ["Lucas Pickering <lucas@lucaspickering.me>"]
description = "Import from other formats to Slumber collections. Not intended for external use."
edition = "2021"
homepage = "https://slumber.lucaspickering.me"
keywords = ["rest", "http", "terminal", "tui"]
license = "MIT"
name = "slumber_import"
repository = "https://github.com/LucasPickering/slumber"
version = "2.4.0"
# Rely on parent for rust-version

[dependencies]
anyhow = {workspace = true}
indexmap = {workspace = true, features = ["serde"]}
itertools = {workspace = true}
mime = {workspace = true}
openapiv3 = "2.0.0"
reqwest = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
serde_yaml = {workspace = true}
slumber_core = {workspace = true}
strum = {workspace = true}
thiserror = {workspace = true}
tracing = {workspace = true}
winnow = {workspace = true}

[dev-dependencies]
pretty_assertions = {workspace = true}
rstest = {workspace = true}
serde_test = {workspace = true}

[features]

[package.metadata.release]
tag = false
