[package]
authors = {workspace = true}
description = "Import from other formats to Slumber collections. Not intended for external use."
edition = {workspace = true}
homepage = {workspace = true}
keywords = {workspace = true}
license = {workspace = true}
name = "slumber_import"
repository = {workspace = true}
rust-version = {workspace = true}
version = {workspace = true}

[dependencies]
anyhow = {workspace = true}
derive_more = {workspace = true, features = ["display"]}
futures = {workspace = true}
indexmap = {workspace = true, features = ["serde"]}
itertools = {workspace = true}
mime = {workspace = true}
openapiv3 = "2.0.0"
reqwest = {workspace = true}
# TODO
# rest_parser = "0.1.6"
rest_parser = {path = "../../../rest_parser"}
serde = {workspace = true}
serde_json = {workspace = true}
serde_yaml = {workspace = true}
slumber_core = {workspace = true}
slumber_util = {workspace = true}
strum = {workspace = true}
thiserror = {workspace = true}
tokio = {workspace = true, features = ["fs"]}
tracing = {workspace = true}
winnow = {workspace = true}

[dev-dependencies]
pretty_assertions = {workspace = true}
rstest = {workspace = true}
serde_test = {workspace = true}
slumber_core = {workspace = true, features = ["test"]}
tokio = {workspace = true, features = ["macros"]}

[lints]
workspace = true

[package.metadata.release]
tag = false
